# openconnect

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  Makefile.am  README.md  TODO  auth-common.c  auth-globalprotect.c  auth-juniper.c  auth.c  compat.c  configure.ac  cstp.c  dtls.c  esp.c  f5.c  fortinet.c  gnutls-dtls.c  gnutls-esp.c  gnutls.c  gnutls.h  gnutls_tpm.c  gnutls_tpm2.c  gnutls_tpm2_esys.c  gnutls_tpm2_ibm.c  gpst.c  gssapi.c  http-auth.c  http.c  jni.c  libopenconnect.map.in  library.c  lzs.c  main.c  mainloop.c  mingw-openconnect.spec.in  mkspec.sh  ntlm.c  nx.c  (+26 more)
.copr/: Makefile  gpgkey-BE07D9FD54809AB2C4B0FF5F63762CDA67E2F359.asc  macros.gpg
android/: Makefile  fetch.sh
bash/: openconnect.bash
java/src/com/example/: LibTest.java
java/src/org/infradead/libopenconnect/: LibOpenConnect.java
po/: LINGUAS  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bg_BG.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  es_CR.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gd.po  gl.po  gu.po  he.po  (+71 more)
tests/: Makefile.am  auth-certificate  auth-nonascii  auth-pkcs11  auth-username-pass  autocompletion  bad_dtls_test.c  cert-fingerprint  common.sh  dtls-psk  id-test  list-taps.c  lzstest.c  ns.sh  obsolete-server-crypto  pfs  sigterm  suppressions.lsan
tests/configs/: server-cert.prm  test-dtls-psk.config  test-obsolete-server-crypto.config.in  test-user-pass.config.in
tests/scripts/: vpnc-script  vpnc-script-detect-disconnect
tests/softhsm/17d09202-a0f3-7e39-6756-d42bd03dda81/: 44aab3a8-a514-9538-b5e6-4840f74a8d13.object  5dc84bbf-0814-0166-8e4c-531f2b436762.object  60fe7df5-d871-b314-4590-9774305cc2ba.object  9a94a6df-b356-05a5-7484-0e93727c1d15.object  c6eb58c1-741d-aa8f-9ce7-88cee037c6a1.object  eb6abab4-2248-d12f-cf30-435efe964bae.object  token.object
tests/softhsm/20526acd-3d1b-8363-eb79-163b3233387a/: 0f93ad33-8495-7e09-67e8-fc911ab3714c.object  8a5e4077-41a6-fd60-58dd-fb0d83671d06.object  token.object
tests/softhsm/32189381-01d2-550b-8c0c-ccc58244a0c4/: 08ab136b-af33-e833-7f9e-41d10981fdcb.object  2954e9f7-bc71-e02a-e0ab-fd376dae3dda.object  86979fa3-6b39-35af-fea1-d728b1789ce8.object  a995f4ad-d827-d0b0-c1f3-7871156daaff.object  d7409cfb-5bd6-b267-a958-d49e32049ef6.object  e40d1609-6066-9ab7-992b-4a6e59d971a5.object  token.object
tests/softhsm/340020a8-6289-ead5-d93a-3d77c9fb819a/: 05198b99-70cb-d1f0-fa2d-57b6ac772930.object  3936e1d3-017b-1623-5db2-5e755f29012a.object  5221b8e5-f706-5763-75dc-942025e74148.object  6040e1c7-9d3f-886f-bcad-7f2c753eaa1f.object  7c179df3-453a-20db-5b7c-8e4fa7aa11db.object  af68913c-cb7f-5625-cbf3-bba947bfbd04.object  token.object
tests/softhsm/8d81d97f-2a4d-5457-0168-3e7ff0e845a8/: 201ac72d-662d-487e-9a10-38feadbf8cdf.object  89261cf0-2f30-0cd8-c823-0cd99f061b61.object  98271b77-e49d-5819-d17b-b7d4b5513ba6.object  b99ba013-3330-0c2e-8c20-8b309f1f548a.object  d601a7a8-08eb-010c-64ea-a1fa4c1f7b21.object  e79b4f92-3718-e8b4-afb9-e9d0615b183b.object  ebd0e0c6-9e16-6d8e-3e7d-c6852728bfeb.object  token.object
tests/softhsm/e0a4adf3-068e-288d-1c53-a97935ad11e7/: 2da91be2-c722-1e38-acb9-d42aa5911b3b.object  53c2b10f-0c5e-de1d-2d1e-22fd048e3d70.object  6795319c-f776-6faa-b1d7-3878b9096eff.object  9bf49199-36eb-ac67-8fee-644f9a743af2.object  a273d1ac-570a-d217-b4b1-a8d7ed34203c.object  ea59535b-eecb-e2fd-a6e3-99d828e5972f.object  token.object
tests/softhsm/e3892d27-7946-8c47-3e77-dc17250acc6a/: 3d7a70d4-a34f-d28b-b1d4-8025026e0eb2.object  77caef11-4401-c6fc-c059-c7980cd70378.object  93b023dc-1018-33a8-fb1a-645c18f4048d.object  b921053a-fe7b-59cf-a483-7cbca04d9eae.object  f9d9bf7a-fcb4-7aa9-8792-5a0e4ff86608.object  token.object
trojans/: csd-post.sh  csd-wrapper.sh  hipreport-android.sh  hipreport.sh  tncc-emulate.py  tncc-wrapper.py
www/: Makefile.am  anyconnect.xml  building.xml  changelog.xml  contribute.xml  csd.xml  download.xml  globalprotect.xml  gui.xml  hip.xml  html.py  index.xml  juniper.xml  licence.xml  mail.xml  menu2-features.xml  menu2-protocols.xml  menu2.xml  packages.xml  platforms.xml  pulse.xml  tncc.xml  token.xml  tpm.xml  vpnc-script.xml
